@@ -32,18 +32,35 @@ merge.data.table <- function(x, y, by = NULL, all = FALSE, all.x = all,
     }
 
     if (.reset.keys(x, by)) {
-        x = copy(x)
-        setkeyv(x,by)
+        # if x has many columns, coping table and setting key on all columns may be relatively slow, so we use a
+        # manual secondary key here. TO DO: replace with set2key when implemented.
+        xkey = x[,by,with=FALSE]  
+        xkey[,.i:=1:nrow(xkey)]
+        setkeyv(xkey,by)
+        xsecondary=TRUE
+    } else {
+        xkey = x   # no copy here
+        xsecondary=FALSE
     }
     if (.reset.keys(y, by)) {
-        y = copy(y)
-        setkeyv(y,by)
+        ykey = y[,by,with=FALSE]
+        ykey[,.i:=1:nrow(ykey)]
+        setkeyv(ykey,by)
+        ysecondary=TRUE
+    } else {
+        ykey = y
+        ysecondary=FALSE
     }
 
-    ykey <- y[,by,with=FALSE]
-    xidx <- x[ykey, nomatch = 0, mult = 'all', which = TRUE]
-    xkey <- x[,by,with=FALSE]
-    yidx <- y[xkey, nomatch = 0, mult = 'all', which = TRUE]
+    xidx = if (xsecondary)
+        xkey[ykey, .i, nomatch=0, mult="all"]$.i   # TO DO: use drop=TRUE when implemented
+    else
+        x[ykey, nomatch = 0, mult = 'all', which = TRUE]
+        
+    yidx = if (ysecondary)
+        ykey[xkey, .i, nomatch=0, mult="all"]$.i
+    else
+        y[xkey, nomatch = 0, mult = 'all', which = TRUE]
 
     if (any(xidx)) {
         tmp = sort(xidx)
